name:    lmor
version: 0.0.0

category: Code Generation

synopsis: X86 surgery.

description: X86 surgery.

author:     Tom Hawkins <tomahawkins@gmail.com>
maintainer: Tom Hawkins <tomahawkins@gmail.com>

license:      BSD3
license-file: LICENSE

homepage: http://github.com/tomahawkins/lmor

build-type:    Simple
cabal-version: >= 1.8

library
  build-depends:
    base         >= 4.0 && < 5,
    directory    >= 1.1,
    process      >= 1.1,
    mtl          >= 2.0,
    bytestring   >= 0.9,
    containers   >= 0.3,
    elf          >= 0.26

  exposed-modules:
    LMOR

  extensions:

  ghc-options: -W

source-repository head
  type:     git
  location: git://github.com/tomahawkins/lmor.git

